# a2a_adk_crewai_impl

./: .gitmodules  README.md  compose.yaml  pyproject.toml
a2a_streamlit_app/: Dockerfile  a2a_client_utils.py  main.py  pyproject.toml  state_manager.py
adk_agent/: Dockerfile  README.md  adk_config.yaml  main.py  pyproject.toml
crewai_agent/: Dockerfile  README.md  crewai_config.yaml  main.py  pyproject.toml
docs/impl_notes/: implementation_notes.md
docs/planning/: a2a_adk_crewai_impl_plan_20250417_143800.md  streamlit_a2a_chat_plan_20250419011800.md
docs/research_notes/: a2a_framework_research_20250417_141700.md  a2a_protocol_research_report_20250419013000.md
