[project]
name = "a2a-streamlit-app"
version = "0.1.0"
description = "Streamlit UI for A2A Agent Interaction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Dependencies specific to the Streamlit app
    "streamlit>=1.44.1",
    "nest-asyncio>=1.6.0", # For running asyncio in Streamlit
    # Add dependencies required by the mounted 'common' code
    "httpx>=0.23.0", # Version adjusted for compatibility previously
    "httpx-sse>=0.4.0",
    "jwcrypto>=1.5.6",
    "pyjwt>=2.10.1",
    "typing-extensions>=4.12.2",
    "pydantic>=2.10.6", # pydantic is also needed by common code
]
